style.css
@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
body,html{
    margin: 0;
    padding: 0;
    font-family: 'Righteous', cursive, system-ui;
    height: 100%;
}
#menuScreen{
    display: block;
    position: absolute;
    background: rgb(54,54,54);
    background: linear-gradient(0deg, rgba(54,54,54,1) 0%, rgba(182,182,182,1) 100%);
    width: 100%;
    height: 100%;
    z-index: 2;
}
#menuContainer{
    font-size: 1.5vw;
    margin-top: 10%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap:10px;
}
#menuContainer h1{
    color: white;
    font-size: 4em;
}
#playerInputContainer{
    display: flex;
    gap: 25px;
}
#playerInputContainer >div {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    font-size: 1.5em;
}
#playerInputContainer input{
    border: none;
    font-size: 1em;
    padding: 10px 20px 10px 20px;
    border-radius: 0.2em;
}
#playerInputContainer input:focus{
    outline: none;
    outline: 2px solid black;
}
#gameStartButton{
    margin-top: 50px;
    padding: 10px 20px 10px 20px;
    font-size: 2em;
    cursor: pointer;
    background-color: white;
    color: black;
    font-weight: bold;
    border: none;
    border-radius: 1em;
}
#gameStartButton:hover{
    background-color: black;
    color:white;
}

#gameScreen{
    height: 100%;
    background: rgb(54,54,54);
    background: linear-gradient(0deg, rgba(54,54,54,1) 0%, rgba(182,182,182,1) 100%);
    display: flex;
    flex-direction: column;
    align-items: center;
}
header{
    text-align: center;
    background-color: #747474;
    width: 60%;
    display: flex;
    align-items: center;
    justify-content: center;
    clip-path:   polygon(0 0, 100% 0, 90% 100%, 10% 100%);
}
header h1{
    margin: 0px;
    padding: 10px;
    color:white
}
.blackText{
    color: black;
}
.whiteText{
    color: white;
}
.whiteBackground{
    background-color: white;
}
.blackBackground{
    background-color: black;
}

main{
    width: 100%;
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap:2em;
    text-align: center;
}
#score{
    width: 50%;
    font-size: 3vw;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: row;
    color: white;
}
#currentPlayerContainer{
    font-size: 2em;
    display: flex;
    flex-direction: column;
}
#currentPlayer{
    font-size: 0.8em;
}

#gameBoard{
    width: clamp(320px, 30rem, 750px);
    height: clamp(320px, 30rem, 750px);
    border-radius: 5%;
    box-shadow: 5px 5px 5px 5px rgb(0,0,0,0.5);
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 25px;
    padding: 25px;
}
#gameBoard > button {
    background-color: #747474;
    border: none;
    cursor: pointer;
    border-radius: 5%;
    box-shadow: 4px 4px 5px 0px rgb(0,0,0,0.3);
    font-size: 4em;
}
#gameBoard > button:hover{
    transform: scale(110%);
}
#resetButton{
    gap: 30px;
    font-size: 1.5em;
    cursor: pointer;
    padding: 10px 20px 10px 20px;
    border-radius: 1em;
    border: none;
}
#resetButton:hover{
    color: white;
    background-color: black;
}

footer{
    width: 60%;
    background-color: #494949;
    clip-path:   polygon(10% 0, 90% 0%, 100% 100%, 0% 100%);
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 10px;
    color: white;
}
#resultScreen{
    position: absolute;
    display: none;
    width: 100%;
    height: 100%;
    backdrop-filter: blur(5px);
    top:0;
    align-items: center;
    justify-content: center;
}
#resultScreenWinner{
    background-color: rgba(54,54,54,0.9);
    border-radius: 3em;
    text-align: center;
    padding: 1em;
    font-size: 5em;
    text-shadow: 0px 0px 15px white;
}
a{
    text-decoration: none;
    color:white;
}
a:hover{
    transform: scale(110%);
    color: black;
}

@media (max-width: 600px) {
    #gameBoard {
      width: 300px;
      height: 300px;
    }
  }

